Poc/sf-core/force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&apos;US&apos;</defaultValue>
    <description>Country</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DealerCountry</valueSetName>
    </valueSet>
</CustomField>