Poc/sf-core/force-app/main/default/objects/Lead/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <description>Legal Name</description>
    <label>Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>