Poc/sf-core/force-app/main/default/objects/Lead/fields/ScoreEmail__c.field-meta.xml
<CustomField>
    <fullName>ScoreEmail__c</fullName>
    <description>Email (Score)</description>
    <label>Email (Score)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X0</fullName>
                <label>Missing</label>
            </value>
            <value>
                <fullName>X1</fullName>
                <label>Invalid or bad domain</label>
            </value>
            <value>
                <fullName>E0</fullName>
                <label>Generic domain</label>
            </value>
            <value>
                <fullName>E1</fullName>
                <label>Corporate domain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>