Poc/sf-core/force-app/main/default/objects/Lead/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>