Poc/sf-core/force-app/main/default/objects/Lead/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>