Poc/sf-core/force-app/main/default/objects/Lead/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>