Poc/sf-core/force-app/main/default/objects/Lead/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <label>Shipping Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>