Poc/sf-core/force-app/main/default/objects/Lead/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Tag</description>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>