Poc/sf-core/force-app/main/default/objects/Lead/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <description>Use</description>
    <label>Use</label>
    <length>5</length>
    <type>Text</type>
</CustomField>